Added Google attribution
Former-commit-id: 4b589aaaa19b9c593b31e26006eef20fb961b8c8

--- a/software.xhtml
+++ b/software.xhtml
@@ -77,8 +77,10 @@
         </div>
 
         <div id="footer">
-            <p>No attempt has been made to make this site compatible with Internet Explorer. If they can't be bothered creating a properly functioning
-                browser, I can't be bothered catering for it.</p>
+            <p>
+                No attempt has been made to make this site compatible with Internet Explorer. If they can't be bothered creating a properly functioning browser, I can't be bothered catering for it.<br />
+                Portions of this page are reproduced from work created and <a href="http://code.google.com/policies.html">shared by Google</a> and used according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0 Attribution License</a>.
+            </p>
         </div>
     </body>
 
