--- a/software.xhtml
+++ b/software.xhtml
@@ -57,22 +57,60 @@
                 <a href="http://gamedev.stackexchange.com/users/8090/gary-buyn">
                     <img src="http://gamedev.stackexchange.com/users/flair/8090.png" width="208" height="58" alt="profile for Gary Buyn at Game Development, Q&amp;A for professional and independent game developers" title="profile for Gary Buyn at Game Development, Q&amp;A for professional and independent game developers" />
                 </a>
+
+                <h2>GitHub</h2>
+
+                <a href="https://github.com/simplegsb">simplegsb</a>
+
             </div>
 
             <div id="content">
-                <h2>Solo Projects</h2>
+                <h2>Personal Projects</h2>
 
                 <ul>
-                    <li><a href="http://www.simpleentertainment.org/projects/cyclops_renegade.xhtml"><img src="res/images/cyclops_renegade_full.png" alt="Cyclops Renegade" /></a></li>
-                    <li><a href="http://www.simpleentertainment.org/projects/the_simplicity_engine.xhtml"><img src="res/images/the_simplicity_engine_full.png" alt="The Simplicity Engine" /></a></li>
-                    <li><a href="http://www.simpleentertainment.org/projects/pc_remote_for_android.xhtml"><img src="res/images/pc_remote_for_android_full.png" alt="PC Remote for Android" /></a></li>
+                    <li><a href="https://github.com/simple-entertainment/simplicity"><img src="res/images/the_simplicity_engine_full.png" alt="The Simplicity Engine" /></a></li>
+                    <li><a href="https://github.com/simple-entertainment/pc-remote"><img src="res/images/pc_remote_for_android_full.png" alt="PC Remote for Android" /></a></li>
                 </ul>
+
+                <h2>Media Design School</h2>
+
+                    <h3>Steering</h3>
+
+                        <ul>
+                            <li><img src="res/images/steering.png" /></li>
+                        </ul>
+
+                        <h4>Download</h4>
+
+                            <ul>
+                                <li><a href="res/bin/steering.zip">Steering.zip</a></li>
+                            </ul>
+
+                        <h4>Controls</h4>
+
+                            <ul>
+                                <li>Move the mouse around the window so the cats have a moving target.</li>
+                            </ul>
+
+                        <h4>Features</h4>
+
+                            <ul>
+                                <li>Cats seek the mouse.</li>
+                                <li>Cats have whiskers which they use to avoid collisions with other cats and static obstacles.</li>
+                                <li>Trees and the ends of walls have repulsion zones which the cats react to.</li>
+                                <li>Repulsion zones and whiskers effect both the speed and desired heading of the cats.</li>
+                                <li>If a cat gets stuck, it will attempt to turn around.</li>
+                                <li>The mouse is surrounded by a large approach radius, when the cats enter it they will begin to slow down.</li>
+                                <li>Cats turn faster when they are facing away from the mouse.</li>
+                                <li>Cats travel faster when they are not turning (or turning slowly).</li>
+                            </ul>
 
                 <h2>Websites</h2>
 
                 <ul>
+                    <li><a href="http://www.rawyoga.co.nz">www.rawyoga.co.nz<img alt="RAW Yoga" src="images/rawyoga.png" /></a></li>
                     <li><a href="http://www.garyshawnbuyn.me">www.garyshawnbuyn.me<h1 id="garyshawnbuyn">Gary Shawn Buyn</h1></a></li>
-                    <li><a href="http://www.simpleentertainment.org">www.simpleentertainment.org<br/><img id="simpleentertainment" src="res/images/banner.png" /></a></li>
+                    <!--li><a href="http://www.simpleentertainment.org">www.simpleentertainment.org<br/><img id="simpleentertainment" src="res/images/banner.png" /></a></li-->
                 </ul>
             </div>
         </div>
