Added intros to some pages and GitHub badge to contact page
Former-commit-id: c4d357535b55b0b9917022eb124bc97239bdf261

--- a/contactme.html
+++ b/contactme.html
@@ -30,8 +30,6 @@
 	<h2>Contact</h2>
 	022 675 4763
 	</br>
-	<a href="https://github.com/simplegsb">GitHub Account</a>
-	</br>
 	<a href="nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
 	</br>
 	<a href="mailto:simplegsb@gmail.com">simplegsb@gmail.com</a>
@@ -40,6 +38,8 @@
 	<a href="http://stackexchange.com/users/0898768a961a4803bc05cba0ccb26caf">
 		<img src="http://stackexchange.com/users/flair/0898768a961a4803bc05cba0ccb26caf.png" width="208" height="58" alt="profile for Gary Buyn on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Gary Buyn on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
 	</a>
+	</br>
+	<iframe src="http://githubbadge.appspot.com/badge/simplegsb" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder=0></iframe>
 	</br>
 	<!-- Facebook Badge START -->
 	<a href="https://www.facebook.com/simplegsb" target="_TOP" title="Gary Buyn">
