--- a/film.html
+++ b/film.html
@@ -37,15 +37,23 @@
 		<h3>Personal Projects</h3>
 		
 		<h4>Str8 Gangsta</h4>
-		
+
+		<p>
+			An instant cult classic. The first film officially made by simple entertainment (me). This film may or may not depict graphic violence and strong course language.
+		</p>
+
 		<video src="videos/str8-gangsta.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, get yourself a better browser ;)
+		No video for you sonny jim, your browser doesn't support it.
 		</video>
 		
 		<h4>Big Deal</h4>
+
+		<p>
+			Now, after numerous extensions to the release date and exceeding the budget 10 fold, the most anticipated film of Summer 07-08 is here! What's more, all the critics are hailing it as 'worth the wait' and 'revolutionary'. P.S. Why is it that every second film you see an add for is 'revolutionary'? That's bullshit.
+		</p>
 		
 		<video src="videos/big-deal.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, get yourself a better browser ;)
+		No video for you sonny jim, your browser doesn't support it.
 		</video>
 		
 		<!--h3>University</h3>
@@ -55,7 +63,7 @@
 		<p>An editing project - with metal!</p>
 		
 		<video src="videos/supernova.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, get yourself a better browser ;)
+		No video for you sonny jim, your browser doesn't support it.
 		</video>
 		
 		<h3>Big TV</h3>
@@ -65,15 +73,15 @@
 		<h4>Destructive Love</h4>
 		
 		<video src="videos/destructive-love-pre-production.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, get yourself a better browser ;)
+		No video for you sonny jim, your browser doesn't support it.
 		</video>
 		
 		<video src="videos/destructive-love-production.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, get yourself a better browser ;)
+		No video for you sonny jim, your browser doesn't support it.
 		</video>
 		
 		<video src="videos/destructive-love-post-production.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, get yourself a better browser ;)
+		No video for you sonny jim, your browser doesn't support it.
 		</video-->
         </div>
     </body>
