--- a/games.html
+++ b/games.html
@@ -29,6 +29,14 @@
 
 		<h2>Games</h2>
 
+		<p>
+			From the disatisfaction of working for large corporations - some of which are in industries I do not agree with - to create and customise enterprise Java applications, I felt the need for a change. I went to the games industry for the challenge, the infinately more interesting products and for the opportunity to make software that does good. It is very important to me now that whatever I do in life, work included, is for a positive end. I studied at <a href="http://www.mediadesignschool.com">Media Design School</a> to assist in the change to the games industry.
+		</p>
+
+		<p>
+			If you are looking for people to work on a serious game title <a href="contactme.html">get in touch</a>. I'm always open to new opportunities to help create good games.
+		</p>
+
 		<h3>Competitions</h3>
 
 		<h4>Comvita Move</h4>
@@ -82,8 +90,42 @@
 
 		<h3>Personal Projects</h3>
 
-		<a href="https://github.com/simple-entertainment/simplicity"><img src="images/the-simplicity-engine.png" alt="The Simplicity Engine" /></a>
+		<img src="images/the-simplicity-engine.png" alt="The Simplicity Engine" />
 
+		<p>
+			The Simplicity Engine is a homegrown component based game engine I created. Originally it was written in Java but I ported it to C++11. This engine has been superceded by the GazEngine middleware I used for my projects at Media Design School where I could not use C++11. The aim now is to port the much more comprehensive and tested GazEngine back to C++11.
+		</p>
+
+		<table>
+			<td>
+				<h5>Source</h5>
+
+				<a href="https://github.com/simple-entertainment/simplicity">Repository on GitHub</a>
+			<td>
+			<td style="width: 30%;">
+				<h5>Code</h5>
+
+				<code>
+					#include &lt;simplicity/Simplicity.h&gt;
+					</br>
+					</br>
+					int main()
+					</br>
+					{
+						</br>
+						&nbsp;&nbsp;&nbsp;&nbsp;Simplicity::addEngine(...);
+						</br>
+						&nbsp;&nbsp;&nbsp;&nbsp;Simplicity::addEntity(...);
+						</br>
+						&nbsp;&nbsp;&nbsp;&nbsp;Simplicity::play();
+						</br>
+						</br>
+						&nbsp;&nbsp;&nbsp;&nbsp;return 0;
+						</br>
+					}
+				</code>
+			</td>
+		</table>
 		<h3>Media Design School</h3>
 
 		<p>
