--- a/software.html
+++ b/software.html
@@ -1,73 +1,115 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Gary Shawn Buyn</title>
+	<head>
+		<title>Gary Shawn Buyn</title>
 
-	<link rel="shortcut icon" href="images/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="css/fonts.css" />
-        <link rel="stylesheet" type="text/css" href="css/layout.css" />
-        <script type="text/javascript" src="js/script.js"></script>
-    </head>
+		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
+		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+		<script type="text/javascript" src="js/script.js"></script>
+	</head>
 
-    <body>
-        <div id="header">
-		<h1>
-		    <a href="index.html">Gary Shawn Buyn</a>
-		</h1>
-		<div id="menu">
-		    <a href="spirituality.html">Spirituality</a>
-		    <a href="health.html">Health</a>
-		    <a href="community.html">Community</a>
-		    <a href="games.html">Games</a>
-		    <a href="software.html">Software</a>
-		    <a href="travel.html">Travel</a>
-		    <a href="film.html">Film</a>
-		    <a href="contactme.html">Contact</a>
+	<body>
+		<div id="header">
+			<h1>
+			    <a href="index.html">Gary Shawn Buyn</a>
+			</h1>
+			<div id="menu">
+			    <a href="spirituality.html">Spirituality</a>
+			    <a href="health.html">Health</a>
+			    <a href="community.html">Community</a>
+			    <a href="games.html">Games</a>
+			    <a href="software.html">Software</a>
+			    <a href="travel.html">Travel</a>
+			    <a href="film.html">Film</a>
+			    <a href="contactme.html">Contact</a>
+			</div>
 		</div>
-        </div>
 
-        <h2>Software</h2>
+		<h2>Software</h2>
 
-	<h3>Competitions</h3>
+		<p>
+			I have a BCMS from the University of Waikato and half a dozen years of industry experience.
+		</p>
 
-	<h4>Hacktivate: Mile High</h4>
+		<h3>Competitions</h3>
 
-	<p>
-		I was part of the winning team in the Mile High competition held by <a href="http://www.hacktivate.me">Hacktivate</a>. Check out this video of it (pause it at 0:46 to see me and my team with the trophy!):
-	</p>
+		<h4>Hacktivate: Mile High</h4>
 
-	<iframe width="560" height="315" src="http://www.youtube.com/embed/clYZQhX5MO4" frameborder="0" allowfullscreen></iframe>
+		<p>
+			I was part of the winning team in the Mile High competition held by <a href="http://www.hacktivate.me">Hacktivate</a>. Check out this video of it (pause it at 0:46 to see me and my team with the trophy!):
+		</p>
 
-	<h5>Source</h5>
+		<iframe width="560" height="315" src="http://www.youtube.com/embed/clYZQhX5MO4" frameborder="0" allowfullscreen></iframe>
 
-	<a href="https://github.com/simplegsb/dehacktivate-km-low">Repository on GitHub</a> (I wrote the Java portion of it)
+		<h5>Source</h5>
 
-	<h3>Personal Projects</h3>
+		<a href="https://github.com/simplegsb/dehacktivate-km-low">Repository on GitHub</a> (I wrote the Java portion of it)
 
-	<a href="https://github.com/simple-entertainment/pc-remote"><img src="images/pc-remote-for-android.png" alt="PC Remote for Android" /></a>
+		<h3>Personal Projects</h3>
 
-	<h3>Websites</h3>
+		<h4>PC Remote for Android</h4>
 
-	<h4>www.rawyoga.co.nz</h4>
+		<img src="images/pc-remote-for-android.png" alt="PC Remote for Android" />
 
-	<p>
-		I was the developer of this website (using Drupal for content management) and Jane from <a href="http://www.janesnation.com">JANESNATION</a> did an awesome job of the design and graphics.
-	</p>
+		<p>
+			I wanted an excuse to try my hand at Android development and this was the result. You can use it to control your PC using your Android device.
+		</p>
 
-	<a href="http://www.rawyoga.co.nz"><img alt="RAW Yoga" src="images/rawyoga.png" /></a>
+		<table>
+			<td>
+				<h5>Source</h5>
 
-	<h4>www.garyshawnbuyn.me</h4>
+				<a href="https://github.com/simple-entertainment/pc-remote">Repository on GitHub</a>
 
-	<p>
-		You are here! I wrote this website all by myself.
-	</p>
+				<h5>Download</h5>
 
-	<a href="http://www.garyshawnbuyn.me"><h1 id="garyshawnbuyn">Gary Shawn Buyn</h1></a>
+				Android: <a href="bin/pcremoteforandroid.apk">pcremoteforandroid.apk</a>
+				</br>
+				Ubuntu: <a href="bin/pcremoteserver.deb">pcremoteserver.deb</a>
+				</br>
+				Windows: <a href="bin/pcremoteserver.zip">pcremoteserver.zip</a>
 
-	<!--h4>www.simpleentertainment.org</h4>
+				<h5>Features</h5>
 
-	<a href="http://www.simpleentertainment.org"><img id="simpleentertainment" src="images/simpleentertainment.png" /></a-->
-</body>
+				<ul>
+					<li>Control the mouse and keyboard.</li>
+					<li>Automatically detect servers on the network.</li>
+					<li>Switch between multiple servers.</li>
+					<li>Switch between multiple control layouts.</li>
+					<li>Customise and create your own layouts with different controls.</li>
+				</ul>
+			<td>
+			<td>
+				<h5>Screenshot</h5>
+
+				<img src="images/pcremoteforandroid.jpg" />
+			</td>
+		</table>
+
+		<h3>Websites</h3>
+
+		<h4>www.rawyoga.co.nz</h4>
+
+		<p>
+			I was the developer of this website (using Drupal for content management) and Jane from <a href="http://www.janesnation.com">JANESNATION</a> did an awesome job of the design and graphics.
+		</p>
+
+		<a href="http://www.rawyoga.co.nz"><img alt="RAW Yoga" src="images/rawyoga.png" /></a>
+
+		<h4>www.garyshawnbuyn.me</h4>
+
+		<p>
+			You are here! I wrote this website all by myself.
+		</p>
+
+		<a href="http://www.garyshawnbuyn.me"><h1 id="garyshawnbuyn">Gary Shawn Buyn</h1></a>
+
+		<!--h4>www.simpleentertainment.org</h4>
+
+		<a href="http://www.simpleentertainment.org"><img id="simpleentertainment" src="images/simpleentertainment.png" /></a-->
+	</body>
 
 </html>
+
