--- a/travel.html
+++ b/travel.html
@@ -30,6 +30,10 @@
     
         <h2>Travel</h2>
 
+	<p>
+		I love to travel and to experience different cultures. I usually travel alone which has given me a lot of time to reflect on myself and a lot of freedom. For me the best experiences are the ones that happen by accident and there is no substitute for having friends who live in the culture you want to explore. If you really want to understand a culture, you need to live in it.
+	</p>
+
 	<table>
 		<td>
 			<div id="map" style="width: 700px; height: 600px;"></div>
