Changes menus, formatting, renamed script etc.
Former-commit-id: e1423ff5ac9f0f228932b1f4dfa11d7893fad601

--- a/contactme.html
+++ b/contactme.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Gary Shawn Buyn</title>
+	<head>
+		<title>Gary Shawn Buyn</title>
 
-	<link rel="shortcut icon" href="images/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="css/fonts.css" />
-        <link rel="stylesheet" type="text/css" href="css/layout.css" />
-        <script type="text/javascript" src="js/script.js"></script>
-    </head>
+		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
+		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+	</head>
 
-    <body>
-        <div id="header">
-		<h1>
-		    <a href="index.html">Gary Shawn Buyn</a>
-		</h1>
-		<div id="menu">
-		    <a href="spirituality.html">Spirituality</a>
-		    <a href="health.html">Health</a>
-		    <a href="community.html">Community</a>
-		    <a href="games.html">Games</a>
-		    <a href="software.html">Software</a>
-		    <a href="travel.html">Travel</a>
-		    <a href="film.html">Film</a>
-		    <a href="contactme.html">Contact</a>
+	<body>
+		<div id="header">
+			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
+			<div id="menu">
+				<a href="spirituality.html">Spirituality</a>
+				<a href="food.html">Food</a>
+				<a href="community.html">Community</a>
+				<a href="sustainability.html">Sustainability</a>
+				<a href="opensource.html">Open Source</a>
+			</div>
+			<div id="menu">
+				<a href="games.html">Games</a>
+				<a href="software.html">Software</a>
+				<a href="travel.html">Travel</a>
+				<a href="film.html">Film</a>
+				<a href="contactme.html">Contact</a>
+			</div>
 		</div>
-        </div>
 
-	<h2>Contact</h2>
-	022 675 4763
-	</br>
-	<a href="nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
-	</br>
-	<a href="mailto:simplegsb@gmail.com">simplegsb@gmail.com</a>
-	</br>
-	</br>
-	<a href="http://stackexchange.com/users/0898768a961a4803bc05cba0ccb26caf">
+		<h2>Contact</h2>
+		022 675 4763
+		</br>
+		<a href="nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
+		</br>
+		<a href="mailto:simplegsb@gmail.com">simplegsb@gmail.com</a>
+		</br>
+		</br>
+		<a href="http://stackexchange.com/users/0898768a961a4803bc05cba0ccb26caf">
 		<img src="http://stackexchange.com/users/flair/0898768a961a4803bc05cba0ccb26caf.png" width="208" height="58" alt="profile for Gary Buyn on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Gary Buyn on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
-	</a>
-	</br>
-	<iframe src="http://githubbadge.appspot.com/badge/simplegsb" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder=0></iframe>
-	</br>
-	<!-- Facebook Badge START -->
-	<a href="https://www.facebook.com/simplegsb" target="_TOP" title="Gary Buyn">
+		</a>
+		</br>
+		<iframe src="http://githubbadge.appspot.com/badge/simplegsb" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder=0></iframe>
+		</br>
+		<!-- Facebook Badge START -->
+		<a href="https://www.facebook.com/simplegsb" target="_TOP" title="Gary Buyn">
 		<img src="https://badge.facebook.com/badge/592409554.8416.974474326.png" style="border: 0px;" />
-	</a>
-	<!-- Facebook Badge END -->
-    </body>
+		</a>
+		<!-- Facebook Badge END -->
+	</body>
 
 </html>
 
