--- a/games.html
+++ b/games.html
@@ -7,23 +7,25 @@
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
-		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 
 	<body>
 		<div id="header">
-			<h1>
-			    <a href="index.html">Gary Shawn Buyn</a>
-			</h1>
+			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
+			<h2 style="color: red;">UNDER CONSTRUCTION</h2>
 			<div id="menu">
-			    <a href="spirituality.html">Spirituality</a>
-			    <a href="health.html">Health</a>
-			    <a href="community.html">Community</a>
-			    <a href="games.html">Games</a>
-			    <a href="software.html">Software</a>
-			    <a href="travel.html">Travel</a>
-			    <a href="film.html">Film</a>
-			    <a href="contactme.html">Contact</a>
+				<a href="spirituality.html">Spirituality</a>
+				<a href="food.html">Food</a>
+				<a href="community.html">Community</a>
+				<a href="sustainability.html">Sustainability</a>
+				<a href="opensource.html">Open Source</a>
+			</div>
+			<div id="menu">
+				<a href="games.html">Games</a>
+				<a href="software.html">Software</a>
+				<a href="travel.html">Travel</a>
+				<a href="film.html">Film</a>
+				<a href="contactme.html">Contact</a>
 			</div>
 		</div>
 
@@ -34,7 +36,7 @@
 		</p>
 
 		<p>
-			If you are looking for people to work on a serious game title <a href="contactme.html">get in touch</a>. I'm always open to new opportunities to help create good games.
+			If you are looking for people to work on a <a href="http://en.wikipedia.org/wiki/Serious_game">serious game</a> title, <a href="contactme.html">get in touch</a>. I'm always open to new opportunities to help create good games.
 		</p>
 
 		<h3>Competitions</h3>
@@ -89,6 +91,8 @@
 		</p>
 
 		<h3>Personal Projects</h3>
+
+		<h4>The Simplicity Engine</h4>
 
 		<img src="images/the-simplicity-engine.png" alt="The Simplicity Engine" />
 
@@ -149,7 +153,7 @@
 				<ul>
 					<li>Plug and Play Engine Architecture - Allows engines to be swapped in and out with minimal changes required e.g. swapping from DirectX to OpenGL.</li>
 					<li>Component Based Architecture - Entities are constructed using composition, not inheritance to avoid class heirarchy explosions. Components are also interfaced to minimise dependencies on particular implementations.</li>
-					<li>Messaging - Messages are mediated to allow swapping in and out of possible message sources and destinations with minimal changes e.g. swapping WinApi to FreeGLUT.</li>
+					<li>Messaging - Messages are mediated to allow swapping in and out of possible message sources and destinations with minimal changes e.g. swapping from WinApi to FreeGLUT.</li>
 					<li>ODBC - Wrapper classes for the ODBC API.</li>
 					<li>Maths - Matrix and Vector implementations and other useful functions.</li>
 					<li>WinApi Engine - An engine that creates a WinApi window and acts as a message source for WinApi events.</li>
