--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Gary Shawn Buyn</title>
+	<head>
+		<title>Gary Shawn Buyn</title>
 
-	<link rel="shortcut icon" href="images/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="css/fonts.css" />
-        <link rel="stylesheet" type="text/css" href="css/layout.css" />
-        <script type="text/javascript" src="js/script.js"></script>
-    </head>
+		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
+		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+	</head>
 
-    <body>
-        <div id="header">
-		<h1>
-		    <a href="index.html">Gary Shawn Buyn</a>
-		</h1>
-		<h2 style="color: red;">UNDER CONSTRUCTION</h2>
-		<div id="menu">
-		    <a href="spirituality.html">Spirituality</a>
-		    <a href="health.html">Health</a>
-		    <a href="community.html">Community</a>
-		    <a href="games.html">Games</a>
-		    <a href="software.html">Software</a>
-		    <a href="travel.html">Travel</a>
-		    <a href="film.html">Film</a>
-		    <a href="contactme.html">Contact</a>
+	<body>
+		<div id="header">
+			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
+			<h2 style="color: red;">UNDER CONSTRUCTION</h2>
+			<div id="menu">
+				<a href="spirituality.html">Spirituality</a>
+				<a href="food.html">Food</a>
+				<a href="community.html">Community</a>
+				<a href="sustainability.html">Sustainability</a>
+				<a href="opensource.html">Open Source</a>
+			</div>
+			<div id="menu">
+				<a href="games.html">Games</a>
+				<a href="software.html">Software</a>
+				<a href="travel.html">Travel</a>
+				<a href="film.html">Film</a>
+				<a href="contactme.html">Contact</a>
+			</div>
 		</div>
-        </div>
 
-	<p style="text-align: center;">
-		My name is Gary, Gary Shawn Buyn to be precise. Herein lie my musings and projects.
-	</p>
+		<p style="text-align: center;">
+			My name is Gary, Gary Shawn Buyn to be precise. Herein lie my musings and projects.
+		</p>
 
-	<img src="images/the-ocean.jpg" />
+		<img src="images/the-ocean.jpg" />
 
-	<p style="text-align: center;">
-		Overlooking the ocean ahead, turbulent waves can be seen. Eventually though, these waves give way to an endless expanse of calm and clarity. Such is the path.
-	</p>
-    </body>
+		<p style="text-align: center;">
+			Overlooking the ocean ahead, turbulent waves can be seen. Eventually though, these waves give way to an endless expanse of calm and clarity. Such is the path.
+		</p>
+	</body>
 
 </html>
 
