--- a/software.html
+++ b/software.html
@@ -7,23 +7,25 @@
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
-		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 
 	<body>
 		<div id="header">
-			<h1>
-			    <a href="index.html">Gary Shawn Buyn</a>
-			</h1>
+			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
+			<h2 style="color: red;">UNDER CONSTRUCTION</h2>
 			<div id="menu">
-			    <a href="spirituality.html">Spirituality</a>
-			    <a href="health.html">Health</a>
-			    <a href="community.html">Community</a>
-			    <a href="games.html">Games</a>
-			    <a href="software.html">Software</a>
-			    <a href="travel.html">Travel</a>
-			    <a href="film.html">Film</a>
-			    <a href="contactme.html">Contact</a>
+				<a href="spirituality.html">Spirituality</a>
+				<a href="food.html">Food</a>
+				<a href="community.html">Community</a>
+				<a href="sustainability.html">Sustainability</a>
+				<a href="opensource.html">Open Source</a>
+			</div>
+			<div id="menu">
+				<a href="games.html">Games</a>
+				<a href="software.html">Software</a>
+				<a href="travel.html">Travel</a>
+				<a href="film.html">Film</a>
+				<a href="contactme.html">Contact</a>
 			</div>
 		</div>
 
