Chnaged quote style
Former-commit-id: 815542ebd500e3895579aee7db71f714b1970344

--- a/spirituality.html
+++ b/spirituality.html
@@ -62,8 +62,10 @@
 			I truly beleive that I have taken the first big step on my journey. I cannot go back. I cannot fall back into ignorance. I am overwhelmed with a desire to meditate more, to challenge myself, to know myself in this moment. On that note I have started attending <a href="http://www.5rhythms.co.nz/classes/auckland">5 Rhythms dance classes</a> and am attending <a href="http://medini.dhamma.org">Vipassana</a> (10 days of silent meditation) followed by a stint in the <a href="http://www.ashraminthebush.org.au">Ashram in the Bush</a> near Byron Bay, Australia.
 		</p>
 
+		<q>"Religion is the belief in someone else's experience, spirituality is having your own experience."</q> ~ Deepak Chopra
+
 		</p>
-			As Deepak Chopra once said: "Religion is the belief in someone else's experience, spirituality is having your own experience." I am having my own experience.
+			I am having my own experience.
 		</p>
 	</body>
 
